--- a/Docker/PyCron/Dockerfile
+++ b/Docker/PyCron/Dockerfile
@@ -3,6 +3,7 @@ RUN apt-get update && apt-get -y install cron vim
 WORKDIR /app
 RUN pip3 install numpy
 RUN pip3 install pytigergraph
+RUN pip3 install pytz
 COPY crontab /etc/cron.d/crontab
 RUN chmod 0644 /etc/cron.d/crontab
 RUN /usr/bin/crontab /etc/cron.d/crontab
